--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Austin Walker</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style_about.css">
 </head>
 
 <body>
