contact page and final touches

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <ul>
             <li>
                 <strong>
-                    <a id="contact" href="#">Contact</a>
+                    <a id="contact" href="contact.html">Contact</a>
                 </strong>
 
             </li>
             <li>
                 <strong>
-                    <a id="portfolio" href="#">Portfolio</a>
+                    <a id="portfolio" href="portfolio.html">Portfolio</a>
                 </strong>
 
             </li>
             <li>
                 <strong>
-                    <a id="about" href="#">About</a>
+                    <a id="about" href="index.html">About</a>
                 </strong>
 
             </li>
